@@ -57,4 +57,15 @@ namespace internal{
 
 #include <Rcpp/preprocessor_generated.h>
 
+#define RCPP_XP_FIELD(__NAME__,__CLASS__,__FIELD__)          \
+extern "C" SEXP __NAME__( SEXP xp ){                         \
+	SEXP res = R_NilValue ;                                  \
+	BEGIN_RCPP                                               \
+		::Rcpp::XPtr<__CLASS__> ptr(xp) ;                    \
+		res = ::Rcpp::wrap( ptr->__FIELD__ ) ;               \
+	END_RCPP                                                 \
+	return res ;                                             \
+}
+
+
 #endif
